pxc/tests/test_001_px/constmet11.px
namespace constmet11;
import common -;

struct foo {
	int x;
	function int n(int y) {
		int oldx = x;
		x = y;
		return oldx;
	}
	function int m(int y) const {
		function int nf(int z) {
			x = 99; // error: not modifiable
			return z;
		}
		return nf(y);
	}
}

function void t1() {
  ptr{foo} v = make_ptr(foo(10));
  println(v->m(20));
}

t1();

